# library

./: .build_docs.sh  .deepsource.toml  .flake8  MANIFEST.in  README.md  emoji_update.py  pre-commit.sh  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yml  emoji_update.yml  pydrocsid.yml  python.yml
PyDrocsid/: async_thread.py  async_utils.py  cog.py  colour.py  command.py  command_edit.py  config.py  converter.py  database.py  discohook.py  embeds.py  emoji_converter.py  emoji_map.json  emoji_update.py  emojis.py  environment.py  events.py  github_api.py  logger.py  logging.py  material_colors.py  material_colors.yml  multilock.py  pagination.py  permission.py  prefix.py  pubsub.py  redis.py  settings.py  translations.py  util.py  utils.py
PyDrocsid/database/: __init__.py  database.py
PyDrocsid/translations/: en.yml
